--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,10 @@ server.port=8080
 server.servlet.session.cookie.http-only=true
 
 logging.level.root=debug
-logging.level.sql=debug
-logging.level.org.hibernate.sql=debug
-logging.level.com.example.springcrudsample=debug
+logging.level.sql=error
+logging.level.org.hibernate.sql=error
+logging.level.com.example.springcrudsample=error
+logging.level.org.springframework.boot.autoconfigure=error
 
 spring.application.name=springCrudSample
 
