--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,13 @@ spring.datasource.url=jdbc:h2:mem:springcrudsample;DB_CLOSE_DELAY=-1;DB_CLOSE_ON
 spring.datasource.username=sa
 spring.datasource.password=
 
+spring.sql.init.continue-on-error=true
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+spring.h2.console.settings.web-allow-others=true
+
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=none
@@ -27,8 +34,5 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.cache.use_second_level_cache=false
 spring.jpa.properties.hibernate.cache.use_query_cache=false
 spring.session.jdbc.initialize-schema=always
-
-spring.h2.console.enabled=false
-spring.h2.console.settings.web-allow-others=true
 
 
